[package]
name = "mosaic-net"
version = "0.2.0"
description = "Mosaic network library"
edition = "2024"
license = "MIT"
authors = [ "Mike Dilger <mike@mikedilger.com>" ]

[dependencies]
alt-tls = { git = "https://github.com/mikedilger/alt-tls", branch = "master" }
mosaic-core = { git = "https://github.com/mikedilger/mosaic-core", branch = "master" }
quinn = "0.11"
quinn-proto = "0.11"
rustls = { version = "0.23", default-features = false, features = [ "logging" ] }

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
